# matrix-lib

./: CMakeLists.txt  README.md
example/: example.cpp
include/matrix/: matrix.hpp
